--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,5 +1,4 @@
 .hourForcast{
-    border: 1px solid green;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -17,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid red;
+    border: 1px solid rgb(171, 171, 171);
     border-radius: 12px;
+    box-shadow: 0px 0px 4px #a0a0a0;
 }
