--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,3 +1,6 @@
+*{
+    margin: 0;
+}
 .hourForcast{
     display: flex;
     flex-direction: row;
@@ -19,4 +22,36 @@
     border: 1px solid rgb(171, 171, 171);
     border-radius: 12px;
     box-shadow: 0px 0px 4px #a0a0a0;
+    background: linear-gradient(to right, #3b82f6, #6366f1);
+    color: white;
+    font-weight: 600;
+}
+
+/* WeatherSearch style */
+
+.WeatherSearch{
+    width: 100%;
+    padding: 20px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.searchInp{
+    padding: 8px 10px;
+    border: 1px solid #3b82f6;
+    outline: none;
+    border-radius: 12px;
+    width: 300px;
+}
+.searchBtn{
+    padding: 10px 10px;
+    border-radius: 12px;
+    background: #3b82f6;
+    color: white;
+    border: none;
+    margin: 0px 10px;
+    cursor: pointer;
+}
+.searchBtn:active{
+    scale: 0.98;
 }
